--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.1",
     "@ant-design/pro-components": "^2.7.19",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
+    "framer-motion": "^11.11.9",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.79.3",
     "sweetalert2": "^11.14.2",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
