--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/charts": "^2.2.1",
+    "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-components": "^2.7.19",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.6",
