--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@ant-design/charts": "^2.2.1",
     "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-components": "^2.7.19",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
@@ -26,7 +30,7 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.6",
     "sass": "^1.79.3",
     "sweetalert2": "^11.14.2",
     "swiper": "^11.1.14",
